fix: basic details and excerpt for posts

--- a/content/posts/use-mdx-bundler-with-next-js.mdx
+++ b/content/posts/use-mdx-bundler-with-next-js.mdx
@@ -2,15 +2,12 @@
 title: MDX bundler with Next.JS
 description: MDX is just an extension of Markdown that allows you to import and write JSX in your markdown documents.
 locale: en
-isPublished: true
-publishedAt: "2021-07-19"
+createdAt: "2021-07-19"
+updatedAt: "2021-07-19"
 tags:
+  - markdown
   - nextjs
-  - terraform
-  - aws
 ---
-
-## MDX, What the hack is this?
 
 MDX is just an extension of Markdown that allows you to import and write JSX in your markdown documents.
 
