feat: add sidebar table of contents using IntersectionObserver

--- a/content/posts/error-handling-in-golang.mdx
+++ b/content/posts/error-handling-in-golang.mdx
@@ -1,10 +1,10 @@
 ---
 title: Error handling in Golang
-locale: en
-discription: Unlike other language, golang does explicit error checking. In golang, errors are values and we can transform any type into error by implementing the error interface which has a single Error() method.
+description: Unlike other language, golang does explicit error checking. In golang, errors are values and we can transform any type into error by implementing the error interface which has a single Error() method.
 isPublished: true
-createdAt: "2021-07-29"
+publishedAt: "2021-07-29"
 updatedAt: "2021-07-29"
+toc: true
 tags:
   - errors
   - golang
