--- a/content/posts/go-maps-in-action.mdx
+++ b/content/posts/go-maps-in-action.mdx
@@ -3,7 +3,7 @@ title: working with golang maps
 description: A map is a unordered collection of key/value pairs, named as hash tables, dictionaries, or associative arrays. These hashed tables provide a fast lookups...
 locale: en
 isPublished: false
-createdAt: "2021-07-19"
+publishedAt: "2021-07-19"
 updatedAt: "2021-07-19"
 tags:
   - hash table
