--- a/content/posts/use-mdx-bundler-with-next-js.mdx
+++ b/content/posts/use-mdx-bundler-with-next-js.mdx
@@ -2,7 +2,7 @@
 title: MDX bundler with Next.JS
 description: MDX is just an extension of Markdown that allows you to import and write JSX in your markdown documents.
 locale: en
-createdAt: "2021-07-19"
+publishedAt: "2021-07-19"
 updatedAt: "2021-07-19"
 tags:
   - markdown
