feat: support reading time, publishedAt & updatedAt

--- a/content/posts/error-handling-in-golang.mdx
+++ b/content/posts/error-handling-in-golang.mdx
@@ -4,6 +4,7 @@ description: Unlike other language, golang does explicit error checking. In gola
 isPublished: true
 publishedAt: "2021-07-29"
 updatedAt: "2021-07-29"
+seoImage: "/assets/error-handling-in-go.png"
 toc: true
 tags:
   - errors
@@ -117,7 +118,7 @@ fmt.Errorf("math: %d cannot be divided by %d", number, zero)
 fmt.Errorf provides ability to format your error message using format specifier and returns the string as a
 value that satisfies error interface.
 
-## Creating custom errors with data in go
+## Custom errors with data in go
 
 As mensioned above, error is an interface type.
 
