refactor: seo information using NextSeo

--- a/content/posts/error-handling-in-golang.mdx
+++ b/content/posts/error-handling-in-golang.mdx
@@ -4,7 +4,7 @@ description: Unlike other language, golang does explicit error checking. In gola
 isPublished: true
 publishedAt: "2021-07-29"
 updatedAt: "2021-07-29"
-seoImage: "/assets/error-handling-in-go.png"
+ogImage: "/assets/error-handling-in-go.png"
 toc: true
 tags:
   - errors
