--- a/content/posts/error-handling-in-golang.mdx
+++ b/content/posts/error-handling-in-golang.mdx
@@ -2,8 +2,8 @@
 title: Error handling in Golang
 description: Unlike other language, golang does explicit error checking. In golang, errors are values and we can transform any type into error by implementing the error interface which has a single Error() method.
 isPublished: true
-publishedAt: "2021-07-29"
-updatedAt: "2021-07-29"
+publishedAt: "2021-08-01"
+updatedAt: "2021-08-02"
 ogImage: "/assets/error-handling-in-go.png"
 toc: true
 tags:
@@ -37,7 +37,7 @@ import (
 	"log"
 )
 
-func getFileContnent(filename string) ([]byte, error) {
+func getFileContent(filename string) ([]byte, error) {
 	content, err := ioutil.ReadFile(filename)
 	if err != nil {
 		return nil, err
@@ -46,7 +46,7 @@ func getFileContnent(filename string) ([]byte, error) {
 }
 
 func main() {
-	content, err := getFileContnent("filename.txt")
+	content, err := getFileContent("filename.txt")
 	if err != nil {
 		log.SetFlags(0)
 		log.Fatal(err)
@@ -56,7 +56,7 @@ func main() {
 
 ```
 
-An [idiomatic](https://en.wikipedia.org/wiki/Programming_idiom) way to handle errors in Go is to return it as last return value of the function and check for the nil condition.
+An [idiomatic](https://en.wikipedia.org/wiki/Programming_idiom) way to handle errors in Go is to return it as the last return value of the function and check for the nil condition.
 
 ## Creating errors in go
 
@@ -120,7 +120,7 @@ value that satisfies error interface.
 
 ## Custom errors with data in go
 
-As mensioned above, error is an interface type.
+As mentioned above, error is an interface type.
 
 Hence, you can create your own error type by implementing the **Error()** function defined in the error interface on your struct.
 
@@ -184,7 +184,7 @@ import (
 	"log"
 )
 
-func getFileContnent(filename string) ([]byte, error) {
+func getFileContent(filename string) ([]byte, error) {
 	content, err := ioutil.ReadFile(filename)
 	if err != nil {
 		return nil, fmt.Errorf("error reading file %s: %w", filename, err)
@@ -193,7 +193,7 @@ func getFileContnent(filename string) ([]byte, error) {
 }
 
 func main() {
-	content, err := getFileContnent("filename.txt")
+	content, err := getFileContent("filename.txt")
 	if err != nil {
 		log.SetFlags(0)
 		log.Fatal(err)
@@ -214,7 +214,7 @@ exit status 1
 
 ### errors.Is
 
-Unwrap, Is and As functions work on errors that may wrap other errors. An error wraps another error if its type has the method **Unwrap()** which returns a a non-nil error.
+Unwrap, Is and As functions work on errors that may wrap other errors. An error wraps another error if its type has the method **Unwrap()** which returns a non-nil error.
 
 **errors.Is** unwraps its first argument sequentially looking for an error that matches the second and returns boolean true if it finds one.
 simple equality checks:
@@ -354,6 +354,6 @@ exit status 1
 
 ## Conclusion
 
-I hope this article will help you to understand the basic of error handling in Go.
+I hope this article will help you to understand the basics of error handling in Go.
 
 If you have found this useful, please consider recommending and sharing it with other fellow developers and if you have any questions or suggestions, feel free to add a comment or contact me on [twitter](https://twitter.com/osfreak).
