fix: gopher image

--- a/content/posts/error-handling-in-golang.mdx
+++ b/content/posts/error-handling-in-golang.mdx
@@ -4,7 +4,7 @@ description: Unlike other language, golang does explicit error checking. In gola
 isPublished: true
 publishedAt: "2021-08-01"
 updatedAt: "2021-08-02"
-ogImage: "/assets/error-handling-in-go.png"
+ogImage: "/assets/error-handling-in-go.svg"
 toc: true
 tags:
   - errors
